--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -54,7 +54,7 @@ jobs:
             run: npm install
 
           - name: Run Code Coverage Reports
-            run: npm run code-coverage
+            run: npm run coverage
             continue-on-error: true
 
           - name: Archive Test Result
