--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -71,3 +71,22 @@ jobs:
               path: coverage
               retention-days: 5
         
+    docker:
+        name: Run Docker
+        runs-on: ubuntu-latest
+        needs: [code-coverage, unit-testing]
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+        - name: Docker login
+          uses: docker/login-action@v3
+          with:
+            registry: ghcr.io
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+        - name: build and push
+          uses: docker/build-push-action@v3
+          with:
+            push: false
+            tags: ghcr.io/${{ github.actor }}/solar-system:$$GITHUB_SHA
+
