--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -88,5 +88,5 @@ jobs:
           uses: docker/build-push-action@v3
           with:
             push: false
-            tags: ghcr.io/${{ github.actor }}/solar-system:$$GITHUB_SHA
+            tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
 
