--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -75,6 +75,8 @@ jobs:
         name: Run Docker
         runs-on: ubuntu-latest
         needs: [code-coverage, unit-testing]
+        permissions:
+          packages: write
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
