--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -91,4 +91,28 @@ jobs:
           with:
             push: false
             tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+    
+    dev-deploy:
+        name: deploy dev
+        runs-on: ubuntu-latest
+        needs: docker
+        environment: development
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+        
+        - name: setup kubectl
+          uses: azure/setup-kubectl
+          with:
+            version: v1.26.0
+        
+        - name: set context
+          uses: azure/k8s-set-context
+          with:
+            method: kubeconfig
+            kubeconfig: $KUBECONFIG
 
+        - name:
+          run: kubectl version --short -o yaml
+
+        
