--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -102,12 +102,12 @@ jobs:
           uses: actions/checkout@v4
         
         - name: setup kubectl
-          uses: azure/setup-kubectl
+          uses: azure/setup-kubectl@v3
           with:
             version: v1.26.0
         
         - name: set context
-          uses: azure/k8s-set-context
+          uses: azure/k8s-set-context@v3
           with:
             method: kubeconfig
             kubeconfig: $KUBECONFIG
