--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -110,7 +110,7 @@ jobs:
           uses: azure/k8s-set-context@v3
           with:
             method: kubeconfig
-            kubeconfig: $KUBECONFIG
+            kubeconfig: '${{ secrets.KUBECONFIG }}'
 
         - name:
           run: kubectl version --short -o yaml 
