--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -96,7 +96,8 @@ jobs:
         name: deploy dev
         runs-on: ubuntu-latest
         needs: docker
-        environment: development
+        environment:
+          name: development
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
