--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -13,4 +13,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: print env
-          run: echo $KUBECONFIG
+          run: echo $TEST
