--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -11,6 +11,7 @@ jobs:
     unit-testing:
         name: Unit Testing
         runs-on: ubuntu-latest
+        environment: development
         steps:
         - name: print env
           run: echo $TEST
