--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -14,7 +14,9 @@ jobs:
         environment: development
         steps:
           - name: create file
-            run: touch build/test.txt
+            run: |
+              mkdir build
+              touch build/test.txt
           - name: upload build artifact
             uses: actions/upload-artifact@v4
             with:
